# npind

./: .gitignore  LICENSE  README.md  pyproject.toml  コーディング.md
benchmarks/: benchmark_take.py  show_benchmark_result.py
src/npind/: __init__.py  choose.py  core.py  take.py  take_along_axis.py  utils.py
tests/: test_choose.py  test_core.py  test_take.py  test_take_along_axis.py
